# md2pptx

./: .gitignore  CLAUDE.md  README.md  build.py  build.spec  main.py  pyproject.toml  requirements.txt  sample.md
md2pptx/: __init__.py  main.py
md2pptx/diagrams/: __init__.py  mermaid_renderer.py
md2pptx/gui/: __init__.py  main_window.py
md2pptx/parser/: __init__.py  markdown_parser.py  models.py
md2pptx/slides/: __init__.py  slide_builder.py
tests/: __init__.py  test_markdown_parser.py
